--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href = "style.css" rel = "stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body class = "d-flex justify-content-center body">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 192.53 265.5">
         <defs>
             <filter id="luminosity-noclip" x="118.69" y="109.35" width="27.12" height="32.64" color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse">
